tests/suite/fail/generated/borrow/fail_move_take_text.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let text = "hello"
    take(text)
    print(text) //~ ERROR was moved
}
